feat: better molbile design

--- a/static/style.css
+++ b/static/style.css
@@ -93,3 +93,17 @@ a {
 .sublist_1 li::before {
     content: ""
 }
+
+@media (max-width: 800px) {
+    html {
+        zoom: 100%;
+    }
+
+    * {
+        font-size: 50%;
+    }
+
+    li, #footer, #footer * {
+        font-size: 75%;
+    }
+}
